k8-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-app-service
  namespace: mern-app
spec:
  type: ClusterIP
  selector:
    app: mern-app
  ports:
    - name: backend
      protocol: TCP
      port: 5000
      targetPort: 5000
      
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000

    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
